- Applied the Moose / Debian 03_stdin PRG_STDIN patch.
- Applied the Patriot closewindow patch.
- Changed signal to gtkdialog_signal in glade_support.c.
- Changed the 90.00 examples to use /usr/local/bin.
- Applied the Debian 01_bashism dot rather than source patch.
- Added my pixmap/button-widget image refresh and scaling code.
- Removed unnecessary code from find_pixmap (locate etc.).

* Mon Apr 9 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.20
- default policy changed ror crolled windows.
- The segfault handling the --geometry option is fixed.
- Better handling of the command line options.

* Sun Feb 25 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.19
- The "exported_column" attribute for trees is fixed. Column 0 means the first
  text column (after the icon column if any). Check file 09.12-tree_one_column
  for example.

* Sun Feb 18 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.18
- Better icon handling in tree views. See the following example programs:
  o 09.01-tree_items
  o 09.02-tree_default_pixmaps
  o 09.03-tree_icon_columns

* Tue Jan 11 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.14
- Compile error fixed by Jean-Philippe Guillemin.

* Wed Jan 10 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.13
- Handling of input for the tree widgets (see example 09.00-tree).

* Tue Jan 02 2007 Laszlo Pere <pipas@linux.pte.hu> 0.7.12
- The mouse button is exported for the button-press-event and
  button-release-event handlers. See 09.02-tree_actions for example.

* Wed Nov 29 2006 Laszlo Pere <pipas@linux.pte.hu> 0.7.11
- The widget properties are set only when the widget is realized. This
  modification has been made because some properties can be set only if there
  is a parent window. (See 16.02.widget_properties_default for example)

* Mon Nov 27 2006 Laszlo Pere <pipas@linux.pte.hu> 0.7.10
- GtkWidget signal actions for the following signal names:
  "button-press-event"
  "button-release-event"
  "configure-event"
  "enter-notify-event"
  "leave-notify-event"
  "focus-in-event"